# HispanShielMobile

./: Cargo.toml  README.md
.github/workflows/: hispashield-ci.yml  rust-ci.yml
docs/adr/: 001-rust-for-system-daemons.md  002-selinux-strict-enforcement.md  ADR-001-rust-daemons.md  ADR-002-selinux-default-deny.md
docs/pqc/: PQC-INTEGRATION.md
docs/threat-model/: STRIDE.md  threat_model.md
docs/tor/: TOR-INTEGRATION.md
research/baseband-isolation/: RESEARCH.md  iommu-split-trust.md
research/compat-layer/: RESEARCH.md  gms-sandboxing.md
research/media-parsing/: RESEARCH.md  disposable_codec_design.md
sepolicy/private/: file_contexts  gms_sandbox.te  hispashield_npd.te  hispashield_sensorguard.te  hispashield_settings.te  media_isolate.te  network_policy_daemon.te  secure_settings_core.te  sensor_guard.te
services/auto-reboot-daemon-rs/: Cargo.toml
services/auto-reboot-daemon-rs/src/: main.rs
services/baseband-firmware-guard-rs/: Cargo.toml
services/baseband-firmware-guard-rs/src/: firmware.rs  imsi_catcher.rs  main.rs
services/baseband-proxy-hal-rs/: Cargo.toml
services/baseband-proxy-hal-rs/src/: at_filter.rs  main.rs
services/deadman-switch-rs/: Cargo.toml
services/deadman-switch-rs/src/: main.rs  switch.rs
services/duress-pin-daemon-rs/: Cargo.toml
services/duress-pin-daemon-rs/src/: duress.rs  main.rs
services/esim-manager-rs/: Cargo.toml
services/esim-manager-rs/src/: esim.rs  main.rs  triangulation.rs
services/gms-compat-proxy-rs/: Cargo.toml
services/gms-compat-proxy-rs/src/: main.rs  proxy.rs
services/media-isolate-coordinator-rs/: Cargo.toml
services/media-isolate-coordinator-rs/src/: coordinator.rs  main.rs
services/network-policy-daemon-rs/: Cargo.toml
services/network-policy-daemon-rs/src/: main.rs  policy.rs  socket.rs
services/pqc-keystore-rs/: Cargo.toml
services/pqc-keystore-rs/src/: algorithms.rs  keystore.rs  main.rs
services/profile-isolation-rs/: Cargo.toml
services/profile-isolation-rs/src/: main.rs  profile.rs
services/remote-attestation-rs/: Cargo.toml
services/remote-attestation-rs/src/: attestation.rs  main.rs  trust_store.rs
services/secure-settings-core-rs/: Cargo.toml
services/secure-settings-core-rs/src/: main.rs  store.rs
services/sensor-guard-rs/: Cargo.toml
services/sensor-guard-rs/src/: guard.rs  main.rs
services/tor-proxy-rs/: Cargo.toml
services/tor-proxy-rs/src/: iptables.rs  main.rs  tor_manager.rs  torrc.rs
services/vpn-killswitch-rs/: Cargo.toml
services/vpn-killswitch-rs/src/: firewall.rs  main.rs  sni.rs
tests/integration/: run_security_tests.sh  test_policy_engine.rs
ui/privacy-dashboard/: pubspec.yaml
ui/privacy-dashboard/app/: build.gradle.kts
ui/privacy-dashboard/app/src/main/: AndroidManifest.xml
ui/privacy-dashboard/app/src/main/java/com/hispashield/dashboard/: MainActivity.kt
ui/privacy-dashboard/app/src/main/java/com/hispashield/dashboard/ui/: DashboardScreen.kt  HardwareKillSwitchScreen.kt  NetworkControlsScreen.kt  ProfileManagerScreen.kt
ui/privacy-dashboard/lib/: main.dart
