[workspace]
resolver = "2"
members = [
    "services/network-policy-daemon-rs",
    "services/sensor-guard-rs",
    "services/secure-settings-core-rs",
    "services/profile-isolation-rs",
    "services/gms-compat-proxy-rs",
    "services/auto-reboot-daemon-rs",
    "services/baseband-proxy-hal-rs",
    "services/media-isolate-coordinator-rs",
    "services/duress-pin-daemon-rs",
    "services/deadman-switch-rs",
    "services/baseband-firmware-guard-rs",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
nix = { version = "0.29", features = ["socket", "uio", "fs", "signal", "process", "reboot"] }
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
