[package]
name = "baseband-proxy-hal"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "baseband-proxy-hal"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
nix = { workspace = true }
