[package]
name = "pqc-keystore"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pqc-keystore"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
