[package]
name = "vpn-killswitch"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vpn-killswitch"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
